WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149767
We should not add InferredTypeTables to old Structures
https://bugs.webkit.org/show_bug.cgi?id=149767
Summary
We should not add InferredTypeTables to old Structures
Filip Pizlo
Reported
2015-10-02 15:47:46 PDT
If anyone observes that a Structure has no inferred type table, they assume that this means that: - There are no guarantees about the type of any value loaded from the properties that the Structure knows about. - It's legal to store any value of any type to any property that the Structure knows about. If we later add an InferredTypeTable to that structure, we might ascribe a type to a pre-existing property. But there may already be extant objects with that Structure and property, and they may not be using the type that we used. There may also be extant inline caches that are already storing values into that property without any type checks.
Attachments
the patch
(6.06 KB, patch)
2015-10-02 15:59 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2015-10-02 15:50:06 PDT
<
rdar://problem/22825526
>
Filip Pizlo
Comment 2
2015-10-02 15:59:35 PDT
Created
attachment 262358
[details]
the patch
Saam Barati
Comment 3
2015-10-02 16:05:04 PDT
Comment on
attachment 262358
[details]
the patch r=me
Filip Pizlo
Comment 4
2015-10-02 16:10:18 PDT
Landed in
http://trac.webkit.org/changeset/190529
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug